# python-project-83

./: README.md  database.sql  example.env  makefile  pyproject.toml
.github/workflows/: linter_check.yml  quality_check.yml  security_check.yml
page_analyzer/: app.py  config.py  db.py  utils.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  list_urls.html  show_url.html
